# first-git

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-akshare.txt
.github/workflows/: daily_reports.yml
config/: report_types.yaml  sector_benchmarks.yaml  source_policy.yaml  thresholds.yaml  watchlist.yaml
scripts/: install_cron.example.sh
stock_monitor/: __init__.py  alerts.py  calibrate_thresholds.py  config.py  data_providers.py  delivery.py  enrichment_providers.py  llm.py  metrics.py  models.py  run_report.py  thresholds.py  time_utils.py  watchlist.py  weekly.py  workflow.py
stock_monitor/agents/: __init__.py  decision.py  research.py  writer.py
templates/: close_report.md.j2  evening_intel.md.j2  morning_check.md.j2  pre_market.md.j2  weekly_review.md.j2
tests/: test_delivery.py  test_enrichment.py  test_metrics.py  test_thresholds.py  test_watchlist.py  test_workflow.py  test_writer.py
