[project]
name = "ai-stock-monitor"
version = "0.1.0"
description = "AI Stock Monitor V1 with multi-agent daily report workflow."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
market-data = ["akshare", "pandas", "PyYAML", "requests", "tushare"]
akshare = ["akshare", "pandas", "PyYAML"]
dev = []
